added procfile and scripts in package.json

--- a/package.json
+++ b/package.json
@@ -1,4 +1,8 @@
 {
+  "scripts": {
+  "build": "eleventy",
+  "heorku-postbuild": "npm run build"
+  },
   "name": "mojo_webapp",
   "version": "1.0.0",
   "main": "index.js",
