--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "scripts": {
   "build": "npx @11ty/eleventy",
-  "heorku-postbuild": "npm run build"
+  "start": "npx @11ty/eleventy --serve"
+
   },
   "name": "mojo_webapp",
   "version": "1.0.0",
